2009-05-04: version 1.26

	* don't include "stats sizes" by default in the stats method,
	  as that can hang big servers for a few seconds (Brad Fitzpatrick)
	
2009-05-02: version 1.25

	* Clear @buck2sock when calling disconnect_all.  (Dennis Stosberg,
	  [rt.cpan.org #45560]
	
	* Reconnects to a dead connection shouldn't happen every time when the
	  connection has never succeded. Apply the dead timeout to sockets that
	  never even came up. Add a test.

	* Warn when trying to put undef values into memcache.
	  (Henry Lyne <hlyne@livejournalinc.com>)
	
	* flush_all now only returns success if there is a proper reply from all
	  servers - Yann Kerherve <yann@sixapart.com>
	
	* 'noreply' support from Tomash Brechko <tomash.brechko@gmail.com>

	* various test updates from Ronald J Kimball <rkimball@pangeamedia.com>

2007-07-17: version 1.24

	* update the stats method, including tests for it
	  (Ronald J Kimball <rkimball+memcached@pangeamedia.com>)

	* arguments to 'new' constructor can be %hash or $hashref now
	  (previously was only $hashref)

	* work around a Perl segfault (Matthieu PATOU <mp@oxado.com>)
	  see http://lists.danga.com/pipermail/memcached/2007-June/004511.html

2007-06-19: version 1.23

	* add 'remove' as an alias for 'delete' (Dave Cardwell <dave@davecardwell.co.uk>)

2007-06-18: version 1.22

	* lost connection handling broken due to wrong %sock_map indexing
	  http://rt.cpan.org/Public/Bug/Display.html?id=27181
	  fix from RHESA

	* let parser_class be configured as a constructor option,
	  defaulting to XS if available, else regular.  (unless
	  $ENV{NO_XS} is set, in which case the default is regular)

2007-05-02: version 1.21

	* new faster optional interface for GetParser subclasses.  doing
	  this release so upcoming Cache::Memcached::GetParserXS can
	  depend on this.  otherwise this release isn't interesting.

2007-04-16: version 1.20

        * fix "Warning produced when flush_all called" from CDENT